; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_font.c_gx_font_cache_flush.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_font.c_gx_font_cache_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gx_font_cache_entry_t = type { i32, %struct.gx_font_cache_entry_t* }

@fonts = common dso_local global %struct.gx_font_cache_entry_t* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gx_font_cache_flush() #0 {
  %1 = alloca %struct.gx_font_cache_entry_t*, align 8
  br label %2

2:                                                ; preds = %5, %0
  %3 = load %struct.gx_font_cache_entry_t*, %struct.gx_font_cache_entry_t** @fonts, align 8
  %4 = icmp ne %struct.gx_font_cache_entry_t* %3, null
  br i1 %4, label %5, label %15

5:                                                ; preds = %2
  %6 = load %struct.gx_font_cache_entry_t*, %struct.gx_font_cache_entry_t** @fonts, align 8
  %7 = getelementptr inbounds %struct.gx_font_cache_entry_t, %struct.gx_font_cache_entry_t* %6, i32 0, i32 1
  %8 = load %struct.gx_font_cache_entry_t*, %struct.gx_font_cache_entry_t** %7, align 8
  store %struct.gx_font_cache_entry_t* %8, %struct.gx_font_cache_entry_t** %1, align 8
  %9 = load %struct.gx_font_cache_entry_t*, %struct.gx_font_cache_entry_t** @fonts, align 8
  %10 = getelementptr inbounds %struct.gx_font_cache_entry_t, %struct.gx_font_cache_entry_t* %9, i32 0, i32 0
  %11 = call i32 @vgft_font_term(i32* %10)
  %12 = load %struct.gx_font_cache_entry_t*, %struct.gx_font_cache_entry_t** @fonts, align 8
  %13 = call i32 @vcos_free(%struct.gx_font_cache_entry_t* %12)
  %14 = load %struct.gx_font_cache_entry_t*, %struct.gx_font_cache_entry_t** %1, align 8
  store %struct.gx_font_cache_entry_t* %14, %struct.gx_font_cache_entry_t** @fonts, align 8
  br label %2

15:                                               ; preds = %2
  ret void
}

declare dso_local i32 @vgft_font_term(i32*) #1

declare dso_local i32 @vcos_free(%struct.gx_font_cache_entry_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
